overflow-wrap: break-word; fix3

--- a/public/styles_sheets.css
+++ b/public/styles_sheets.css
@@ -38,6 +38,7 @@ ol > li{
   min-height: 3rem;
   padding: 1rem 1rem 1rem 3rem;
   position: relative;
+  word-wrap: break-word;
 }
 
 .handleButtons{
